# PPAP-Check

./: .gitignore  README.md  pyproject.toml
src/: index.py
src/ppapcheck/: __init__.py  main.py  models.py
src/ppapcheck/services/: __init__.py  audit_log_service.py  cross_document_validator.py  document_classifier.py  document_ingestion_service.py  document_ocr_service.py  extraction_service.py  report_generator.py  requirement_catalog.py  sample_submissions.py  scoring_engine.py  standards_rule_engine.py  technical_quality_validator.py  traceability_engine.py  upload_submission_builder.py  validation_orchestrator.py
src/ppapcheck/static/: site.css
src/ppapcheck/templates/: index.html
tests/: test_api.py  test_extraction_service.py  test_technical_quality_validator.py  test_traceability_engine.py  test_upload_submission_builder.py  test_validation_engine.py
