[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ppapcheck"
version = "0.1.0"
description = "Evidence-based PPAP and FAI submission validation platform"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.1,<0.136",
    "uvicorn>=0.41.0,<0.42",
    "jinja2>=3.1.6,<3.2",
    "pydantic>=2.12.5,<3",
    "python-multipart>=0.0.22,<0.0.23",
    "pypdf>=6.8.0,<7",
    "openpyxl>=3.1.5,<4",
    "pdfplumber>=0.11.9,<0.12",
    "openai>=2.26.0,<3",
    "pymupdf>=1.27.1,<2",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.28.1,<0.29",
    "pytest>=9.0.2,<10",
]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ppapcheck = [
    "templates/*.html",
    "static/*",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
